pofcc-103 initial checkin with ctsc roles