@@ -55,153 +55,253 @@ class DroolPossessionRoleMappingTest extends DroolBase {
         }
     }
 
+    private static final String PRIMARY_LOCATION_ID = "219164";
+    private static final String NO_PRIMARY_LOCATION_ID = null;
     private static final String REGION_LDN = "LDN";
+    private static final String NO_REGION = null;
     private static final String WORK_TYPES_HEARING_CENTRE =
         "routine_work,applications,decision_making_work,error_management,appeals";
     private static final String WORK_TYPES_WLU =
         "routine_work,applications,decision_making_work,error_management";
     private static final String WORK_TYPES_BAILIFF = "enforcement_support,error_management";
     private static final String WORK_TYPES_ACCESS_REQUESTS = "access_requests";
+    private static final String WORK_TYPES_CTSC = "routine_work,applications,decision_making_work,error_management";
+    private static final String WORK_TYPES_CTSC_TEAM_LEADER = "routine_work,applications,decision_making_work,access_requests,error_management";
+    private static final String NO_WORK_TYPES = null;
 
     // Captures role-specific output expectations so each scenario stays readable.
     private record ExpectedRole(String roleName,
-                                Classification classification,
+                                RoleCategory roleCategory, Classification classification,
                                 GrantType grantType,
                                 boolean readOnly,
-                                String expectedRegion,
-                                String expectedWorkTypes) {
+                                String region,
+                                String primaryLocation,
+                                String workTypes) {
     }
 
     private static ExpectedRole expectedRole(String roleName,
+                                             RoleCategory roleCategory,
                                              Classification classification,
                                              GrantType grantType,
                                              boolean readOnly,
-                                             String expectedRegion,
-                                             String expectedWorkTypes) {
-        return new ExpectedRole(roleName, classification, grantType, readOnly, expectedRegion, expectedWorkTypes);
+                                             String region,
+                                             String primaryLocation,
+                                             String workTypes) {
+        return new ExpectedRole(roleName, roleCategory, classification, grantType, readOnly, region, primaryLocation, workTypes);
     }
 
-    // define the expected attributes for each role
+    // define the expected attributes for roles which have variations depending on jobrole
+
+    private static ExpectedRole hmctsAdmin(String region, String primaryLocation) {
+        return expectedRole(
+                RoleName.HMCTS_ADMIN,
+                RoleCategory.ADMIN,
+                Classification.PRIVATE,
+                GrantType.BASIC,
+                true,
+                region,
+                primaryLocation,
+                NO_WORK_TYPES
+        );
+    }
+
+    private static ExpectedRole taskSupervisor(RoleCategory roleCategory, String region) {
+        return expectedRole(
+                RoleName.TASK_SUPERVISOR,
+                roleCategory,
+                Classification.PUBLIC,
+                GrantType.STANDARD,
+                false,
+                region,
+                PRIMARY_LOCATION_ID,
+                NO_WORK_TYPES
+        );
+    }
+
+    private static ExpectedRole caseAllocator(RoleCategory roleCategory, String region) {
+        return expectedRole(
+                RoleName.CASE_ALLOCATOR,
+                roleCategory,
+                Classification.PUBLIC,
+                GrantType.STANDARD,
+                false,
+                region,
+                PRIMARY_LOCATION_ID,
+                NO_WORK_TYPES
+        );
+    }
+
+    private static ExpectedRole specificAccessApproverAdmin(String region) {
+        return expectedRole(
+                RoleName.SPECIFIC_ACCESS_APPROVER_ADMIN,
+                RoleCategory.ADMIN,
+                Classification.PUBLIC,
+                GrantType.STANDARD,
+                false,
+                region,
+                PRIMARY_LOCATION_ID,
+                WORK_TYPES_ACCESS_REQUESTS
+        );
+    }
+
+    // define the expected attributes for roles which do not alter
+
     private static final ExpectedRole ROLE_HEARING_CENTRE_TEAM_LEADER = expectedRole(
-        RoleName.HEARING_CENTRE_TEAM_LEADER,
-        Classification.PUBLIC,
-        GrantType.STANDARD,
-        false,
-        REGION_LDN,
-        WORK_TYPES_HEARING_CENTRE
+            RoleName.HEARING_CENTRE_TEAM_LEADER,
+            RoleCategory.ADMIN,
+            Classification.PUBLIC,
+            GrantType.STANDARD,
+            false,
+            REGION_LDN,
+            PRIMARY_LOCATION_ID,
+            WORK_TYPES_HEARING_CENTRE
     );
 
     private static final ExpectedRole ROLE_HEARING_CENTRE_ADMIN = expectedRole(
-        RoleName.HEARING_CENTRE_ADMIN,
-        Classification.PUBLIC,
-        GrantType.STANDARD,
-        false,
-        REGION_LDN,
-        WORK_TYPES_HEARING_CENTRE
-    );
-
-    private static final ExpectedRole ROLE_TASK_SUPERVISOR = expectedRole(
-        RoleName.TASK_SUPERVISOR,
-        Classification.PUBLIC,
-        GrantType.STANDARD,
-        false,
-        REGION_LDN,
-        null
-    );
-
-    private static final ExpectedRole ROLE_HMCTS_ADMIN = expectedRole(
-        RoleName.HMCTS_ADMIN,
-        Classification.PRIVATE,
-        GrantType.BASIC,
-        true,
-        null,
-        null
-    );
-
-    private static final ExpectedRole ROLE_CASE_ALLOCATOR = expectedRole(
-        RoleName.CASE_ALLOCATOR,
-        Classification.PUBLIC,
-        GrantType.STANDARD,
-        false,
-        REGION_LDN,
-        null
-    );
-
-    private static final ExpectedRole ROLE_SPECIFIC_ACCESS_APPROVER_ADMIN = expectedRole(
-        RoleName.SPECIFIC_ACCESS_APPROVER_ADMIN,
-        Classification.PUBLIC,
-        GrantType.STANDARD,
-        false,
-        REGION_LDN,
-        WORK_TYPES_ACCESS_REQUESTS
+            RoleName.HEARING_CENTRE_ADMIN,
+            RoleCategory.ADMIN,
+            Classification.PUBLIC,
+            GrantType.STANDARD,
+            false,
+            REGION_LDN,
+            PRIMARY_LOCATION_ID,
+            WORK_TYPES_HEARING_CENTRE
     );
 
     private static final ExpectedRole ROLE_WLU_ADMIN = expectedRole(
         RoleName.WLU_ADMIN,
+        RoleCategory.ADMIN,
         Classification.PUBLIC,
         GrantType.STANDARD,
         false,
-        null,
+        NO_REGION,
+        PRIMARY_LOCATION_ID,
         WORK_TYPES_WLU
     );
 
     private static final ExpectedRole ROLE_WLU_TEAM_LEADER = expectedRole(
         RoleName.WLU_TEAM_LEADER,
+        RoleCategory.ADMIN,
         Classification.PUBLIC,
         GrantType.STANDARD,
         false,
-        null,
+        NO_REGION,
+        PRIMARY_LOCATION_ID,
         WORK_TYPES_WLU
     );
 
     private static final ExpectedRole ROLE_BAILIFF_ADMIN = expectedRole(
         RoleName.BAILIFF_ADMIN,
+        RoleCategory.ADMIN,
         Classification.PUBLIC,
         GrantType.STANDARD,
         false,
-        null,
+        NO_REGION,
+        PRIMARY_LOCATION_ID,
         WORK_TYPES_BAILIFF
     );
+
+    private static final ExpectedRole ROLE_CTSC = expectedRole(
+        RoleName.CTSC,
+        RoleCategory.CTSC,
+        Classification.PUBLIC,
+        GrantType.STANDARD,
+        false,
+        NO_REGION,
+        PRIMARY_LOCATION_ID,
+        WORK_TYPES_CTSC
+    );
+
+    private static final ExpectedRole ROLE_HMCTS_CTSC = expectedRole(
+        RoleName.HMCTS_CTSC,
+        RoleCategory.CTSC,
+        Classification.PRIVATE,
+        GrantType.BASIC,
+        true,
+        NO_REGION,
+        NO_PRIMARY_LOCATION_ID,
+        NO_WORK_TYPES
+    );
+
+    private static final ExpectedRole ROLE_CTSC_TEAM_LEADER = expectedRole(
+        RoleName.CTSC_TEAM_LEADER,
+        RoleCategory.CTSC,
+        Classification.PUBLIC,
+        GrantType.STANDARD,
+        false,
+        NO_REGION,
+        PRIMARY_LOCATION_ID,
+        WORK_TYPES_CTSC_TEAM_LEADER
+    );
+
+    private static final ExpectedRole ROLE_SPECIFIC_ACCESS_APPROVER_CTSC = expectedRole(
+        RoleName.SPECIFIC_ACCESS_APPROVER_CTSC,
+        RoleCategory.CTSC,
+        Classification.PUBLIC,
+        GrantType.STANDARD,
+        false,
+        NO_REGION,
+        PRIMARY_LOCATION_ID,
+        WORK_TYPES_ACCESS_REQUESTS
+    );
+
+
 
     // Define expected roles for each job id.
 
     private static final List<ExpectedRole> EXPECTED_ROLES_HEARING_CENTRE_TEAM_LEADER = List.of(
         ROLE_HEARING_CENTRE_TEAM_LEADER,
         ROLE_HEARING_CENTRE_ADMIN,
-        ROLE_HMCTS_ADMIN,
-        ROLE_SPECIFIC_ACCESS_APPROVER_ADMIN,
-        ROLE_TASK_SUPERVISOR,
-        ROLE_CASE_ALLOCATOR
+        hmctsAdmin(NO_REGION, NO_PRIMARY_LOCATION_ID),
+        specificAccessApproverAdmin(REGION_LDN),
+        taskSupervisor(RoleCategory.ADMIN, REGION_LDN),
+        caseAllocator(RoleCategory.ADMIN, REGION_LDN)
     );
 
     private static final List<ExpectedRole> EXPECTED_ROLES_HEARING_CENTRE_ADMIN = List.of(
         ROLE_HEARING_CENTRE_ADMIN,
-        ROLE_HMCTS_ADMIN,
-        ROLE_TASK_SUPERVISOR,
-        ROLE_CASE_ALLOCATOR
+        hmctsAdmin(NO_REGION, NO_PRIMARY_LOCATION_ID),
+        taskSupervisor(RoleCategory.ADMIN,  REGION_LDN),
+        caseAllocator(RoleCategory.ADMIN, REGION_LDN)
     );
 
     private static final List<ExpectedRole> EXPECTED_ROLES_WLU_ADMIN = List.of(
-        ROLE_HMCTS_ADMIN,
+        hmctsAdmin(NO_REGION, PRIMARY_LOCATION_ID),
         ROLE_WLU_ADMIN,
-        ROLE_TASK_SUPERVISOR,
-        ROLE_CASE_ALLOCATOR
+        taskSupervisor(RoleCategory.ADMIN, NO_REGION),
+        caseAllocator(RoleCategory.ADMIN, NO_REGION)
     );
 
     private static final List<ExpectedRole> EXPECTED_ROLES_WLU_TEAM_LEADER = List.of(
-        ROLE_HMCTS_ADMIN,
+        hmctsAdmin(NO_REGION, NO_PRIMARY_LOCATION_ID),
         ROLE_WLU_ADMIN,
         ROLE_WLU_TEAM_LEADER,
-        ROLE_SPECIFIC_ACCESS_APPROVER_ADMIN,
-        ROLE_TASK_SUPERVISOR,
-        ROLE_CASE_ALLOCATOR
+        specificAccessApproverAdmin(NO_REGION),
+        taskSupervisor(RoleCategory.ADMIN,  NO_REGION),
+        caseAllocator(RoleCategory.ADMIN, NO_REGION)
     );
 
     private static final List<ExpectedRole> EXPECTED_ROLES_BAILIFF_ADMIN = List.of(
-        ROLE_HMCTS_ADMIN,
+        hmctsAdmin(REGION_LDN, PRIMARY_LOCATION_ID),
         ROLE_BAILIFF_ADMIN,
-        ROLE_TASK_SUPERVISOR,
-        ROLE_CASE_ALLOCATOR
+        taskSupervisor(RoleCategory.ADMIN, REGION_LDN),
+        caseAllocator(RoleCategory.ADMIN, REGION_LDN)
+    );
+
+    private static final List<ExpectedRole> EXPECTED_ROLES_CTSC_ADMIN = List.of(
+        ROLE_CTSC,
+        ROLE_HMCTS_CTSC,
+        taskSupervisor(RoleCategory.CTSC, NO_REGION),
+        caseAllocator(RoleCategory.CTSC, NO_REGION)
+    );
+
+    private static final List<ExpectedRole> EXPECTED_ROLES_CTSC_TEAM_LEADER = List.of(
+        ROLE_CTSC_TEAM_LEADER,
+        ROLE_CTSC,
+        ROLE_HMCTS_CTSC,
+        ROLE_SPECIFIC_ACCESS_APPROVER_CTSC,
+        taskSupervisor(RoleCategory.CTSC, NO_REGION),
+        caseAllocator(RoleCategory.CTSC, NO_REGION)
     );
 
     static Stream<Arguments> possessionAdminScenarios() {
@@ -265,6 +365,30 @@ class DroolPossessionRoleMappingTest extends DroolBase {
                 TaskSupervisorFlag.NO,
                 CaseAllocatorFlag.NO,
                 EXPECTED_ROLES_BAILIFF_ADMIN
+            ),
+            Arguments.of(
+                JobTitle.CTSC_ADMIN,
+                TaskSupervisorFlag.NO,
+                CaseAllocatorFlag.NO,
+                EXPECTED_ROLES_CTSC_ADMIN
+            ),
+            Arguments.of(
+                JobTitle.CTSC_ADMIN,
+                TaskSupervisorFlag.YES,
+                CaseAllocatorFlag.YES,
+                EXPECTED_ROLES_CTSC_ADMIN
+            ),
+            Arguments.of(
+                JobTitle.CTSC_TEAM_LEADER,
+                TaskSupervisorFlag.NO,
+                CaseAllocatorFlag.NO,
+                EXPECTED_ROLES_CTSC_TEAM_LEADER
+            ),
+            Arguments.of(
+                JobTitle.CTSC_TEAM_LEADER,
+                TaskSupervisorFlag.YES,
+                CaseAllocatorFlag.YES,
+                EXPECTED_ROLES_CTSC_TEAM_LEADER
             )
         );
     }
@@ -280,7 +404,7 @@ class DroolPossessionRoleMappingTest extends DroolBase {
         judicialOfficeHolders.clear();
 
         CaseWorkerAccessProfile cap = UserAccessProfileBuilder.buildUserAccessProfileForRoleId5();
-        cap.setServiceCode(Jurisdiction.POSSESSION.getServiceCodes().get(0));
+        cap.setServiceCode(Jurisdiction.POSSESSION.getServiceCodes().getFirst());
         cap.setSuspended(false);
         cap.setRoleId(jobTitle.getRoleId());
         cap.setRoleName(jobTitle.getRoleName());
@@ -318,29 +442,35 @@ class DroolPossessionRoleMappingTest extends DroolBase {
             RoleAssignment actual = roleAssignmentByName.get(expected.roleName());
             assertNotNull(actual, "Missing role assignment for role: " + expected.roleName());
 
-            assertEquals(RoleCategory.ADMIN, actual.getRoleCategory());
+            assertEquals(expected.roleCategory, actual.getRoleCategory());
             assertEquals(RoleType.ORGANISATION, actual.getRoleType());
             assertEquals(expected.classification(), actual.getClassification());
             assertEquals(expected.grantType(), actual.getGrantType());
             assertEquals(expected.readOnly(), actual.isReadOnly());
 
             assertNotNull(actual.getAttributes().get(Attributes.Name.JURISDICTION));
-            assertNotNull(actual.getAttributes().get(Attributes.Name.PRIMARY_LOCATION));
             assertEquals(Jurisdiction.POSSESSION.getName(),
                 actual.getAttributes().get(Attributes.Name.JURISDICTION).asText());
 
-            if (expected.expectedRegion() == null) {
+            if (expected.primaryLocation() == null) {
+                assertNull(actual.getAttributes().get(Attributes.Name.PRIMARY_LOCATION));
+            } else {
+                assertNotNull(actual.getAttributes().get(Attributes.Name.PRIMARY_LOCATION));
+                assertEquals(expected.primaryLocation(), actual.getAttributes().get(Attributes.Name.PRIMARY_LOCATION).asText());
+            }
+
+            if (expected.region() == null) {
                 assertNull(actual.getAttributes().get(Attributes.Name.REGION));
             } else {
                 assertNotNull(actual.getAttributes().get(Attributes.Name.REGION));
-                assertEquals(expected.expectedRegion(), actual.getAttributes().get(Attributes.Name.REGION).asText());
+                assertEquals(expected.region(), actual.getAttributes().get(Attributes.Name.REGION).asText());
             }
 
-            if (expected.expectedWorkTypes() == null) {
+            if (expected.workTypes() == null) {
                 assertNull(actual.getAttributes().get(Attributes.Name.WORK_TYPES));
             } else {
                 assertNotNull(actual.getAttributes().get(Attributes.Name.WORK_TYPES));
-                assertEquals(expected.expectedWorkTypes(),
+                assertEquals(expected.workTypes(),
                     actual.getAttributes().get(Attributes.Name.WORK_TYPES).asText());
             }
         });
